Update desktop .yml

--- a/.github/workflows/desktop .yml
+++ b/.github/workflows/desktop .yml
@@ -34,9 +34,8 @@ jobs:
         run: |
           sudo apt-get install libvlc-dev
           sudo apt-get install libvlccore-dev
-          haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null --quiet
-          haxelib install hmm --quiet
+          haxelib setup ~/haxelib
           haxelib install lime
           haxelib install openfl
           haxelib install flixel
@@ -54,7 +53,6 @@ jobs:
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
           haxelib list
-          haxelib run hmm install
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
@@ -62,7 +60,7 @@ jobs:
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
-          name: linuxBuild
+          name: Linux
           path: 'export/release/linux/bin'
   buildWindows:
     runs-on: windows-latest
