--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           haxelib install flixel-ui
           haxelib install flixel-addons 3.0.2
           haxelib install tjson
-          haxelib install hxmath
+          haxelib install hxmath 0.18.0 
           haxelib install hxjsonast
           haxelib install SScript 4.0.1
           haxelib git hxCodec https://github.com/SPLCoding/hxCodec-but-it-works-xd.git
@@ -89,6 +89,7 @@ jobs:
           haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
           haxelib set SScript 4.0.1
+          haxelib set hxmath 0.18.0 
           haxelib list
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
