--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,13 +53,13 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
-          haxelib install lime 7.9.0
+          haxelib install lime
           haxelib install openfl
-          haxelib --never install flixel 5.2.2
+          haxelib install flixel
           haxelib run lime setup flixel
-          haxelib install flixel-tools 1.5.1
+          haxelib install flixel-tools
           haxelib install flixel-ui
-          haxelib install flixel-addons 3.0.2
+          haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install SScript
@@ -82,10 +82,6 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 7.9.0
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
-          haxelib set hxcpp 4.2.1
           haxelib list
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
