--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -1,4 +1,7 @@
-name: desktop Build
+# This is a basic workflow to help you get started with Actions
+
+name: desktopBuild
+
 
 # Controls when the action will run.
 on:
@@ -15,7 +18,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   BuildWindows:
-    runs-on: windows-latest
+    runs-on: windows-build
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -42,7 +45,7 @@ jobs:
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime
           haxelib install openfl
-          haxelib install flixel
+          haxelib git openfl https://github.com/beihu235/openfl
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
@@ -53,7 +56,7 @@ jobs:
           haxelib git hxCodec https://github.com/polybiusproxy/hxCodec
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib install hscript
-          haxelib install SScript
+          haxelib install BrewScript
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
           haxelib list
@@ -84,7 +87,7 @@ jobs:
           path: export/release/windows/bin
   buildLinux:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: linux-build
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -103,7 +106,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install lime
           haxelib install openfl
-          haxelib install flixel
+          haxelib git openfl https://github.com/beihu235/openfl
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
@@ -114,7 +117,7 @@ jobs:
           haxelib git hxCodec https://github.com/polybiusproxy/hxCodec
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib install hscript
-          haxelib install SScript
+          haxelib install BrewScript
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
           haxelib list
@@ -128,7 +131,7 @@ jobs:
           name: Linux
           path: 'export/release/linux/bin'
   buildMac:
-    runs-on: macos-latest
+    runs-on: mac-build
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -144,7 +147,7 @@ jobs:
           haxelib install hxcpp > /dev/null --quiet
           haxelib install lime
           haxelib install openfl
-          haxelib install flixel
+          haxelib git openfl https://github.com/beihu235/openfl
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
@@ -155,7 +158,7 @@ jobs:
           haxelib git hxCodec https://github.com/polybiusproxy/hxCodec
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib install hscript
-          haxelib install SScript
+          haxelib install BrewScript
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
           haxelib list
