--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime
-          haxelib git openfl https://github.com/beihu235/openfl
+          haxelib install openfl
           haxelib install flixel
           haxelib run lime setup flixel
           haxelib install flixel-tools
