--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
       - name: Building
-        run: haxelib run lime build android -debug -${{ matrix.arch }}
+        run: haxelib run lime build android -${{ matrix.arch }} -debug
         env:
           cert_pass: nullfunni
           cert_alias_pass: nullfunni
