--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,225 +3,6 @@ on:
   push:
   workflow_dispatch:
 jobs:
-  Windows:
-    runs-on: windows-latest
-    permissions: write-all
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@master
-        with:
-          haxe-version: latest
-
-      - name: Restore Previous Cache
-        id: cache-debug-build-windows-restore
-        uses: actions/cache/restore@main
-        with:
-          path: |
-            .haxelib
-            export/windows/haxe
-            export/windows/obj
-          key: cache-windows-build
-
-      - name: Installing Libraries
-        run: |
-          haxelib install hmm
-          haxelib run hmm install
-
-      - name: Building
-        run: haxelib run lime build windows -debug
-
-      - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-windows-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message)
-            }
-
-      - name: Save Current Cache
-        id: cache-release-build-windows-save
-        uses: actions/cache/save@main
-        with:
-          path: |
-            .haxelib
-            export/windows/haxe
-            export/windows/obj
-          key: cache-windows-build
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: windowsBuild
-          path: export/windows/bin
-          if-no-files-found: warn
-  MacOS:
-    runs-on: macos-latest
-    permissions: write-all
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@master
-        with:
-          haxe-version: latest
-
-      - name: Restore Previous Cache
-        id: cache-build-restore
-        uses: actions/cache/restore@main
-        with:
-          path: |
-            .haxelib
-            export/macos/haxe
-            export/macos/obj
-          key: cache-macos-build
-
-      - name: Installing Libraries
-        run: |
-          haxelib install hmm
-          haxelib run hmm install
-
-      - name: Building
-        run: haxelib run lime build mac -debug
-
-      - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-macos-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message)
-            }
-
-      - name: Save Current Cache
-        id: cache-build-save
-        uses: actions/cache/save@main
-        with:
-          path: |
-            .haxelib
-            export/macos/haxe
-            export/macos/obj
-          key: cache-macos-build
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: macosBuild
-          path: export/macos/bin
-          if-no-files-found: warn
-  Linux:
-    runs-on: ubuntu-latest
-    permissions: write-all
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@master
-        with:
-          haxe-version: latest
-
-      - name: Restore Previous Cache
-        id: cache-build-restore
-        uses: actions/cache/restore@main
-        with:
-          path: |
-            .haxelib
-            export/linux/haxe
-            export/linux/obj
-          key: cache-linux-build
-
-      - name: Installing Libraries
-        run: |
-          haxelib install hmm
-          haxelib run hmm install 
-
-      - name: Building
-        run: haxelib run lime build linux -debug
-
-      - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-linux-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message)
-            }
-
-      - name: Save Current Cache
-        id: cache-build-save
-        uses: actions/cache/save@main
-        with:
-          path: |
-            .haxelib
-            export/linux/haxe
-            export/linux/obj
-          key: cache-linux-build
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: linuxBuild
-          path: export/linux/bin
-          if-no-files-found: warn
   Android:
     runs-on: ubuntu-latest
     permissions: write-all
@@ -244,7 +25,7 @@ jobs:
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
         with:
-          haxe-version: latest
+          haxe-version: 4.2.5
 
       - name: Restore Previous Cache
         id: cache-build-restore
@@ -254,7 +35,7 @@ jobs:
             .haxelib
             export/android/haxe
             export/android/obj
-          key: cache-android-build
+          key: cache-android-build-debug
 
       - name: Installing Libraries
         run: |
@@ -309,7 +90,7 @@ jobs:
 
             	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
             		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-android-build") {
+            			if (cache.key == "cache-android-build-debug") {
             				console.log('Clearing ' + cache.key + '...')
             				await github.rest.actions.deleteActionsCacheById({
             					owner: context.repo.owner,
@@ -332,7 +113,7 @@ jobs:
             .haxelib
             export/android/haxe
             export/android/obj
-          key: cache-android-build
+          key: cache-android-build-debug
 
       - name: Upload Artifact
         uses: actions/upload-artifact@main
