--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,10 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
       - name: Building
-        run: haxelib run lime build android -debug
-        
+        run: haxelib run lime build android -${{ matrix.arch }}
+        env:
+          cert_pass: nullfunni
+          cert_alias_pass: nullfunni
 
       - name: Clear Previous Cache
         uses: actions/github-script@main
@@ -136,5 +138,5 @@ jobs:
         with:
           name: androidBuild
           path: export/release/android/bin/app/build/outputs/apk/debug
-          if-no-files-found: warn
+        
               
