--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -33,8 +33,8 @@ jobs:
         with:
           path: |
             .haxelib
-            export/android/haxe
-            export/android/obj
+            export/debug/android/haxe
+            export/debug/android/obj
           key: cache-android-build-debug
 
       - name: Installing Libraries
@@ -111,8 +111,8 @@ jobs:
         with:
           path: |
             .haxelib
-            export/android/haxe
-            export/android/obj
+            export/debug/android/haxe
+            export/debug/android/obj
           key: cache-android-build-debug
 
       - name: Upload Artifact
