--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,12 +54,12 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 7.9.0
-          haxelib install openfl 9.2.1
+          haxelib install openfl 9.1.0
           haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
-          haxelib install flixel-tools 1.5.1
+          haxelib install flixel-tools
           haxelib install flixel-ui
-          haxelib install flixel-addons 3.0.2
+          haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxjsonast
           haxelib git SScript https://github.com/MaysLastPlay10/SScript-backup
@@ -71,6 +71,7 @@ jobs:
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
           haxelib list
+          
 
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -83,9 +84,6 @@ jobs:
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib set lime 7.9.0
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
-          haxelib set hxcpp 4.2.1
           haxelib list
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
