--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,12 +54,12 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 7.9.0
-          haxelib install openfl 9.1.0
+          haxelib install openfl 9.2.1
           haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
-          haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
+          haxelib install flixel-tools 1.5.1
+          haxelib install flixel-ui 2.5.0
+          haxelib install flixel-addons 3.0.2
           haxelib install tjson
           haxelib install hxjsonast
           haxelib git SScript https://github.com/MaysLastPlay10/SScript-backup
@@ -70,8 +70,7 @@ jobs:
           haxelib install hxcpp-debug-server
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
-          haxelib list
-          
+          haxelib list         
 
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
