--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,17 +47,15 @@ jobs:
             ~/.gradle
             export/release/android/haxe
             export/release/android/obj
-          key: cache-android-buil
-
-          
+          key: cache-android-build
 
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime 7.9.0
-          haxelib install openfl 9.2.0
-          haxelib --never install flixel 5.2.2
+          haxelib git openfl https://github.com/beihu235/openfl
+          haxelib git flixel https://github.com/beihu235/flixel
           haxelib run lime setup flixel
           haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui
