--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,7 @@ jobs:
           haxelib install hxcpp-debug-server
           haxelib git androiddialogs https://github.com/beihu235/AndroidDialogs
           haxelib git devicelanguage https://github.com/beihu235/devicelanguage
+          haxelib install samcodes-notifications
           haxelib list         
 
       - name: Create Version Tag
