--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install SScript 7.0.0
-          haxelib install hxCodec 2.6.0
+          haxelib git hxCodec https://github.com/beihu235/hxCodec
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
           haxelib git extension-androidtools https://github.com/MaysLastPlay77/extension-androidtools
@@ -90,7 +90,6 @@ jobs:
           haxelib set flixel 5.2.2
           haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
-          haxelib set hxCodec 2.6.0
           haxelib set SScript 7.0.0
   
           haxelib list
