--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -67,7 +67,13 @@ jobs:
         run: |
           haxelib run lime setup -alias -y
           haxelib set hxcpp 4.2.1
-          haxelib set hxCodec 2.5.1
+          haxelib set openfl 9.2.0
+          haxelib set lime 7.9.0
+          haxelib set flixel 5.2.2
+          haxelib set flixel-addons 3.0.2
+          haxelib set hxcpp 4.2.1
+          haxelib set SScript 7.0.0
+          haxelib list
       - name: Compile
         run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
       - name: Save Current Cache
@@ -125,6 +131,17 @@ jobs:
           haxelib list         
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
+      - name: Setup Lime
+        run: |
+          haxelib run lime setup -alias -y
+          haxelib set hxcpp 4.2.1
+          haxelib set openfl 9.2.0
+          haxelib set lime 7.9.0
+          haxelib set flixel 5.2.2
+          haxelib set flixel-addons 3.0.2
+          haxelib set hxcpp 4.2.1
+          haxelib set SScript 7.0.0
+          haxelib list  
       - name: Compile
         run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
@@ -168,6 +185,17 @@ jobs:
           haxelib list         
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
+      - name: Setup Lime
+        run: |
+          haxelib run lime setup -alias -y
+          haxelib set hxcpp 4.2.1
+          haxelib set openfl 9.2.0
+          haxelib set lime 7.9.0
+          haxelib set flixel 5.2.2
+          haxelib set flixel-addons 3.0.2
+          haxelib set hxcpp 4.2.1
+          haxelib set SScript 7.0.0
+          haxelib list  
       - name: Compile
         run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
