--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -101,7 +101,7 @@ jobs:
             }
 
       - name: Save Current Cache
-        id: cache-release-build-windows-save
+        id: cache-build-windows-save
         uses: actions/cache/save@main
         with:
           path: |
@@ -194,7 +194,7 @@ jobs:
             }
 
       - name: Save Current Cache
-        id: cache-release-build-linux-save
+        id: cache-build-linux-save
         uses: actions/cache/save@main
         with:
           path: |
@@ -283,7 +283,7 @@ jobs:
             }
 
       - name: Save Current Cache
-        id: cache-release-build-macos-save
+        id: cache-build-macos-save
         uses: actions/cache/save@main
         with:
           path: |
