--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -43,7 +43,7 @@ jobs:
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime
           haxelib install openfl
-          haxelib install flixel 5.2.2
+          haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
@@ -66,8 +66,6 @@ jobs:
           haxelib set hxcpp 4.2.1
           haxelib set openfl 9.2.0
           haxelib set lime 7.9.0
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
           haxelib set SScript 7.0.0
           haxelib list
@@ -109,7 +107,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install lime
           haxelib install openfl
-          haxelib install flixel 5.2.2
+          haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
@@ -131,8 +129,6 @@ jobs:
           haxelib set hxcpp 4.2.1
           haxelib set openfl 9.2.0
           haxelib set lime 7.9.0
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
           haxelib set SScript 7.0.0
           haxelib list  
@@ -160,7 +156,7 @@ jobs:
           haxelib install hxcpp > /dev/null --quiet
           haxelib install lime
           haxelib install openfl
-          haxelib install flixel 5.2.2
+          haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
@@ -182,8 +178,6 @@ jobs:
           haxelib set hxcpp 4.2.1
           haxelib set openfl 9.2.0
           haxelib set lime 7.9.0
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
           haxelib set SScript 7.0.0
           haxelib list  
