--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -42,7 +42,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
           haxelib install lime
-          haxelib install openfl
+          haxelib install openfl 9.2.0
           haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
@@ -106,7 +106,7 @@ jobs:
           haxelib install hxcpp > /dev/null --quiet
           haxelib setup ~/haxelib
           haxelib install lime
-          haxelib install openfl
+          haxelib install openfl 9.2.0
           haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
@@ -155,7 +155,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null --quiet
           haxelib install lime
-          haxelib install openfl
+          haxelib install openfl 9.2.0
           haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
