--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -103,7 +103,7 @@ jobs:
           haxelib install hxcpp > /dev/null --quiet
           haxelib setup ~/haxelib
           haxelib install lime
-          haxelib install openfl 9.2.0
+          haxelib install openfl
           haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
@@ -123,9 +123,6 @@ jobs:
       - name: Setup Lime
         run: |
           haxelib run lime setup -alias -y
-          haxelib set hxcpp 4.2.1
-          haxelib set openfl 9.2.0
-          haxelib set lime 7.9.0
           haxelib set hxcpp 4.2.1
           haxelib set SScript 7.0.0
           haxelib list  
