--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -64,6 +64,7 @@ jobs:
         run: |
           haxelib run lime setup -alias -y
           haxelib set lime 7.9.0
+          haxelib set openfl 9.1.0
           haxelib set flixel 5.2.2
           haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
