--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   BuildWindows:
-    runs-on: windows-2019
+    runs-on: windows-latest
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -41,35 +41,30 @@ jobs:
         run: |
           haxelib setup C:/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
-          haxelib install lime 7.9.0
-          haxelib install openfl 9.2.0
-          haxelib --never install flixel 5.2.2
+          haxelib install lime
+          haxelib install openfl
+          haxelib install flixel
           haxelib run lime setup flixel
-          haxelib install flixel-tools 1.5.1
+          haxelib run lime setup
+          haxelib install flixel-tools
           haxelib install flixel-ui
-          haxelib install flixel-addons 3.0.2
+          haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxjsonast
-          haxelib install SScript
           haxelib install hxCodec 2.6.0
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
-          haxelib install SScript
+          haxelib install SScript 7.0.0
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
-          haxelib list         
+          haxelib list
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Setup Lime
         run: |
           haxelib run lime setup -alias -y
-          haxelib set lime 7.9.0
-          haxelib set openfl 9.2.0
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
           haxelib set hxcpp 4.2.1
-          haxelib set SScript 7.0.0
-          haxelib list
+          haxelib set hxCodec 2.5.1
       - name: Compile
         run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
       - name: Save Current Cache
@@ -106,34 +101,24 @@ jobs:
           sudo apt-get install libvlccore-dev
           haxelib install hxcpp > /dev/null --quiet
           haxelib setup ~/haxelib
-          haxelib install lime 7.9.0
-          haxelib install openfl 9.2.0
-          haxelib --never install flixel 5.2.2
+          haxelib install lime
+          haxelib install openfl
+          haxelib install flixel
           haxelib run lime setup flixel
-          haxelib install flixel-tools 1.5.1
+          haxelib run lime setup
+          haxelib install flixel-tools
           haxelib install flixel-ui
-          haxelib install flixel-addons 3.0.2
+          haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxjsonast
-          haxelib install SScript
           haxelib install hxCodec 2.6.0
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
-          haxelib install SScript
+          haxelib install SScript 7.0.0
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
-          haxelib list         
+          haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
-      - name: Setup Lime
-        run: |
-          haxelib run lime setup -alias -y
-          haxelib set openfl 9.2.0
-          haxelib set lime 7.9.0
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
-          haxelib set hxcpp 4.2.1
-          haxelib set SScript 7.0.0
-          haxelib list  
       - name: Compile
         run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
@@ -157,7 +142,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null --quiet
           haxelib install lime
-          haxelib install openfl 9.2.0
+          haxelib install openfl
           haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
@@ -166,23 +151,14 @@ jobs:
           haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxjsonast
-          haxelib git hxCodec https://github.com/beihu235/hxCodec
+          haxelib install hxCodec 2.6.0
           haxelib git linc_luajit https://github.com/Sirox228/linc_luajit
-          haxelib install SScript
+          haxelib install SScript 7.0.0
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib install hxcpp-debug-server
-          haxelib list         
+          haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
-      - name: Setup Lime
-        run: |
-          haxelib run lime setup -alias -y
-          haxelib set hxcpp 4.2.1
-          haxelib set openfl 9.2.0
-          haxelib set lime 7.9.0
-          haxelib set hxcpp 4.2.1
-          haxelib set SScript 7.0.0
-          haxelib list  
       - name: Compile
         run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
